--- a/sms_completion_report.html
+++ b/sms_completion_report.html
@@ -9,11 +9,7 @@
 <body class="container mt-5">
 
     <h1 class="mb-4">SMS Signature Requests Report</h1>
-    <br>
-</p>This tool will calculate the completion rate of Signature Requests delivered via SMS within the specified date range. It does not include any data for non-sms based requests.</p>
-</p>This is an open-source tool that is not backed by any entity or assurances. Use it at your own discretion.</p>
 
-<hr>
     <div class="mb-3">
         <label for="apiKey" class="form-label">API Key:</label>
         <input type="password" id="apiKey" class="form-control" placeholder="Enter your API Key">
@@ -31,30 +27,24 @@
     </div>
     
     <button class="btn btn-success mb-4" onclick="generateReport()">Generate Report</button>
-    <br>
-    <hr>
-    <br>
+    
     <h2>Completion Rate: <span id="completionRate">0%</span></h2>
     <br>
     <button class="btn btn-primary mt-4" onclick="downloadCSV()">Download CSV</button>
-    <br>
-    <hr>
-    <br>
+<br><br>
     <h2>
         <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#tableSection" aria-expanded="false" aria-controls="tableSection">
-            View All SMS Signature Requests in Date Range (WARNING - May display PII)
+            Display Table for SMS Signature Requests (Warning May Display PII)
         </button>
     </h2>
     <div class="collapse" id="tableSection">
         <div id="tableContainer"></div>
         <div class="pagination mt-4" id="pagination"></div>
-        <br><br>
-
     </div>
-<br><br>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const SMS_requests = [];
+        let SMS_requests = [];
         let currentPage = 1;
         const rowsPerPage = 25;
 
@@ -75,7 +65,7 @@
             let totalCompleted = 0;
             let totalSMSRequests = 0;
 
-            SMS_requests.length = 0;
+            SMS_requests = []; // Reset before loading new data
 
             while (true) {
                 const response = await fetch(`https://api.hellosign.com/v3/signature_request/list?page=${page}&page_size=100&query=${dateRange}`, {
@@ -88,8 +78,8 @@
                     alert('Failed to fetch signature requests. Please check your API Key and try again.');
                     return;
                 }
-
                 const data = await response.json();
+                console.log(data);
 
                 data.signature_requests.forEach(request => {
                     request.signatures.forEach(signer => {
@@ -99,6 +89,7 @@
                                 name: signer.signer_name,
                                 email: signer.signer_email_address,
                                 status: signer.status_code,
+                                requesterEmail: request.requester_email_address,
                                 signedOn: signer.signed_at ? new Date(signer.signed_at * 1000).toLocaleString() : 'Not signed',
                                 isComplete: signer.status_code === "signed" || signer.status_code === "declined"
                             });
@@ -111,7 +102,8 @@
                     });
                 });
 
-                if (!data.list_info.more) break;
+                // Break when all pages are fetched
+                if (page >= data.list_info.num_pages) break;
                 page++;
             }
 
@@ -142,7 +134,7 @@
             const tbody = document.createElement('tbody');
 
             const headerRow = document.createElement('tr');
-            const headers = ['Title', 'Name', 'Email', 'Status', 'Signed On', 'Completion'];
+            const headers = ['Title', 'Name', 'Email',  'Status', 'Requester Email Address', 'Signed On', 'Completion'];
             headers.forEach(headerText => {
                 const th = document.createElement('th');
                 th.appendChild(document.createTextNode(headerText));
@@ -153,8 +145,8 @@
             table.appendChild(thead);
 
             const startIndex = (currentPage - 1) * rowsPerPage;
-            const endIndex = startIndex + rowsPerPage;
-            const paginatedItems = SMS_requests.slice(startIndex, endIndex);
+            const endIndex = Math.min(startIndex + rowsPerPage, SMS_requests.length); 
+            const paginatedItems = SMS_requests.slice(startIndex, endIndex); 
 
             paginatedItems.forEach(item => {
                 const row = document.createElement('tr');
@@ -182,6 +174,7 @@
                 button.addEventListener('click', () => {
                     currentPage = i;
                     renderTable();
+                    renderPagination(); 
                 });
 
                 if (i === currentPage) {
@@ -192,9 +185,34 @@
                 pagination.appendChild(button);
             }
         }
+
+        function renderPagination() {
+            const pagination = document.getElementById('pagination');
+            pagination.innerHTML = '';
+
+            const totalPages = Math.ceil(SMS_requests.length / rowsPerPage);
+            for (let i = 1; i <= totalPages; i++) {
+                const button = document.createElement('button');
+                button.classList.add('btn', 'btn-outline-primary', 'me-2');
+                button.innerText = i;
+                button.addEventListener('click', () => {
+                    currentPage = i;
+                    renderTable();
+                    renderPagination(); // Keep pagination updated
+                });
+
+                if (i === currentPage) {
+                    button.classList.remove('btn-outline-primary');
+                    button.classList.add('btn-primary');
+                }
+
+                pagination.appendChild(button);
+            }
+        }
+
         function downloadCSV() {
             const csvRows = [];
-            const headers = ['Title', 'Name', 'Email', 'Status', 'Completion', 'Date Signed', 'Time Signed'];
+            const headers = ['Title', 'Name', 'Email', 'Requester Email Address', 'Status','Completion', 'Signed On', "Signed at"];
             csvRows.push(headers.join(','));
 
             SMS_requests.forEach(item => {
@@ -202,9 +220,10 @@
                     item.title,
                     item.name,
                     item.email,
+                    item.requesterEmail,
                     item.status,
                     item.isComplete ? 'Complete' : 'Incomplete',
-                    item.signedOn,
+                    item.signedOn
                 ];
                 csvRows.push(row.join(','));
             });
